--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.yanwensiyi</groupId>
-    <artifactId>classfile-util</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>classfile-dsl-kt</artifactId>
+    <version>0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
